--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@prisma/adapter-neon": "^7.3.0",
     "next": "16.1.2",
     "prisma": "^7.3.0",
     "react": "19.2.3",
