--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     ]
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.10",
     "@prisma/adapter-neon": "^7.3.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.2",
     "prisma": "^7.3.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "swiper": "^12.1.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
