--- a/package.json
+++ b/package.json
@@ -26,15 +26,22 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.10",
     "@prisma/adapter-neon": "^7.3.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "commitlint": "^20.4.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.2",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "swiper": "^12.1.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^20.4.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -50,6 +57,7 @@
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
